Descrizione del progetto

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+ 
   <!-- Nav-Bar - START -->
   <nav>
     <div>
@@ -32,8 +33,27 @@
   <!-- Nav-Bar - END -->
 
 
+  
   <div class="container">
+    <h1>Descrizione del progetto</h1>
+  <br>
     <div class="flex-wrapper">
+    
+    <p>
+      Il progetto è un generatore d'esami , esso è implementato allo scopo di facilitare
+la generazione degli esami in tutte le materie.
+    </p>
+    <p>
+      Il progetto consente agli insegnanti di inserire tutte le domande pronti per l'esame, tale domande saranno clasificate in base alla difficoltà e con il tempo impiegato per essere 
+risolte.
+Dunque per generare un'esame, l'insegnate dovrebbe scegliere la materia, il numero delle domande
+con la difficoltà e il tempo relativi.
+</p>
+<p>
+  Alla fine, il sito genera l'esame in maniera casuale con le domande prescelte in formato PDF.
+</p>
+<br>
+    <div class="divider"></div>
 
       <div class="contact-card">
         <br>
