linked registration pages

--- a/login/login.html
+++ b/login/login.html
@@ -37,6 +37,8 @@
             <label for="password" class="input-label">Password</label>
           </div>
           <input type="submit" class="btn" value="Login" name="login" />
+          <p>Non hai registrato? <a class="registration-link" href="../signup/signup.html">Registra qui</a></p>
+
         </form>
       </div>
     </div>
