--- a/signup/signup.html
+++ b/signup/signup.html
@@ -70,6 +70,8 @@
             <label for="vpassword" class="input-label">Verifica Password</label>
           </div>
           <input type="submit" class="btn" value="Crea Account" name="signup" />
+          <p>Già registrato? <a class="registration-link" href="../login/login.html">accendi qui</a></p>
+
         </form>
       </div>
     </div>
